# agentic-workspace

./: .coverage  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  Makefile  README.md  ROADMAP.md  SYSTEM_INTENT.md  TODO.md  agent-evaluation-roadmap.md  agent-feedback-prompt.txt  agent-workflow-porting-checklist.md  agentic-workspace.toml  contract-tooling-roadmap.md  llms.txt  pyproject.toml  simplification-roadmap.md
.agentic-memory/: UPGRADE-SOURCE.toml  VERSION.md  WORKFLOW.md
.agentic-memory/skills/: README.md
.agentic-planning/: UPGRADE-SOURCE.toml
.agentic-workspace/: AGENTS.md  OWNERSHIP.toml  WORKFLOW.md  config.local.toml  config.toml  delegation-outcomes.json  payload-provenance.json
.agentic-workspace/docs/: agent-aids-storage.md  agent-installation.md  candidate-lanes-contract.md  capability-aware-execution.md  capability-contract.json  cold-start-protocol.md  compact-contract-profile.md  compatibility-policy.md  context-budget-contract.md  contract-schema-index.md  delegation-posture-contract.md  execution-flow-contract.md  external-intent-evidence-contract.md  extraction-and-discovery-contract.md  finished-work-inspection-contract.md  installer-behavior.md  knowledge-promotion-workflow.md  lifecycle-and-config-contract.md  local-integration-area.md  local-memory.md  memory-metadata-contract.md  minimum-operating-model.md  module-map.md  orchestrator-workflow-contract.md  ownership-authority-contract.md  proof-surfaces-contract.md  reporting-contract.md  routing-contract.md  standing-intent-contract.md  system-intent-contract.md  workspace-config-contract.md
.agentic-workspace/memory/: SKILLS.md  UPGRADE-SOURCE.toml  WORKFLOW.md
.agentic-workspace/planning/: ROADMAP.md  UPGRADE-SOURCE.toml  agent-manifest.json  external-intent-evidence.json  finished-work-evidence.json  mutation-provenance.json  process.md  state.toml
.agentic-workspace/skills/: REGISTRY.json
.agentic-workspace/system-intent/: WORKFLOW.md  architecture-principles.toml  intent.toml  subsystems.toml
.agentic-workspace/verification/: assurance-evidence-records.json  manifest.toml  reasoning-economy-evidence.json  test-strategy-dispositions.json  test-suite-budget.json
.beads/: .beads-credential-key  metadata.json
.codex/: hooks.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-ownership.json  release.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  01-direction-proposal.yml  02-bug-regression.yml  02-external-planning.yml  03-review-friction.yml  03-workflow-friction.yml  README.md  config.yml  execution-slice.yml  intent-issue.yml  review-audit.yml
.github/workflows/: ci.yml  pr-semver-label.yml  release-from-semver-label.yml  release.yml
.release/changes/: 2359-release-recovery-publication-state.toml  2383-host-guidance-targets.toml  2384-proof-route-health.toml  2388-implement-first-decision-latency.toml  README.md  fix-release-dispatch-heredoc.toml  planning-closeout-dry-run-command.toml  pr-2350-target-evidence-assignment.toml  pr-2351-assignment-gates-lifecycle.toml  pr-2352-guidance-identity-events.toml  pr-2353-action-authority-worktrees.toml  pr-2354-evaluation-lifecycle.toml  pr-2356-proof-template-receipts.toml  (+5 more)
bootstrap/: .gitignore.append  AGENTS.md  README.md  ROADMAP.md  TODO.md
docs/: agent-installation.md  agent-os-capabilities.md  agentic-workspace-install.md  architecture.md  benchmarking-contract.md  boundary-and-extraction.md  candidate-lanes-contract.md  capability-aware-execution.md  codex-preflight-policy-contract-migration.md  codex-procedural-operation-contracts-migration.md  cold-start-protocol.md  collaboration-safety.md  compact-contract-profile.md  compatibility-policy.md  continuation-readiness-projections.md  contract-schema-index.md  contributor-playbook.md  declarative-contract-boundary.md  default-path-contract.md  delegated-judgment-contract.md  delegation-posture-contract.md  design-principles.md  documentation-status.md  dogfooding-feedback.md  dogfooding-usage-ledger.md  ecosystem-roadmap.md  environment-recovery-contract.md  execution-flow-contract.md  execution-summary-contract.md  extension-boundary.md  extraction-and-discovery-contract.md  generated-surface-trust.md  host-repo-dogfooding-report-template.md  host-repo-learning.md  index.md  init-lifecycle.md  installed-contract-design-checklist.md  installer-behavior.md  integration-contract.md  intent-contract.md  (+30 more)
memory/: index.md  manifest.toml
scripts/: install_git_hooks.py  render_agent_docs.py  render_external_agent_handoff.py  run_agentic_workspace.py
skills/: README.md
tests/: test_agent_aids.py  test_agentic_workspace_launcher.py  test_chatgpt_review_loop.py  test_check_planning_surfaces.py  test_codex_session_identity_agent_aid.py  test_command_generation_artifacts.py  test_command_generation_integration.py  test_command_generation_primitive_executor.py  test_command_generation_release_promotion.py  test_command_surface_bundle_check.py  test_compact_command_runner.py  test_completion_cost_json_corpus.py  test_completion_cost_lane_evidence.py  test_completion_cost_live_behavior_proof.py  test_completion_cost_schema_analysis.py  test_contract_tooling.py  test_contract_tooling_surfaces.py  test_coordinated_release.py  test_external_agent_evaluation_lane.py  test_external_consumer_profile.py  test_external_integration_boundary.py  test_external_operation_clients.py  test_generated_command_package_proof_runner.py  test_generated_tool_conformance.py  test_git_hooks.py  test_github_check_inspection.py  test_github_issue_body_agent_aid.py  test_installer.py  test_lazy_discovery_measurements.py  test_lifecycle_smoke.py  test_long_horizon_episode.py  test_maintainer_surfaces.py  test_model_cli_harness.py  test_no_absolute_paths.py  test_operating_decision.py  test_package_artifact_duplicates.py  test_packaging.py  test_pr_comment_delta.py  test_prompt_semantic_markers.py  test_proof_subject.py  (+33 more)
tools/: AGENT_QUICKSTART.md  AGENT_ROUTING.md  agent-manifest.json  chatgpt_review_loop.py  start_chatgpt_review_poller.py
(+2245 files in other folders)
