[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentic-workspace"
version = "0.0.0"
description = "Repo-native continuity and execution layer for agents, combining workspace routing, active planning, and durable memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "agentic-memory",
  "agentic-planning",
]

[project.scripts]
agentic-workspace = "agentic_workspace.generated_cli_entrypoint:main"

[dependency-groups]
dev = [
  "jsonschema",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
  "ty",
  "pymarkdownlnt",
]

[tool.uv]
package = true

[tool.uv.sources]
agentic-memory = { workspace = true }
agentic-planning = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/command-generation",
  "packages/memory",
  "packages/planning",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_workspace"]

[tool.hatch.build.targets.wheel.force-include]
"generated/python/workspace-cli/generated_cli_package/__init__.py" = "src/agentic_workspace/_generated_cli_package_impl/__init__.py"
"generated/python/workspace-cli/generated_cli_package/command_package.json" = "src/agentic_workspace/_generated_cli_package_impl/command_package.json"
"generated/python/workspace-cli/generated_cli_package/adapter_commands.json" = "src/agentic_workspace/_generated_cli_package_impl/adapter_commands.json"

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/generated/python/workspace-cli/generated_cli_package/__init__.py",
  "/generated/python/workspace-cli/generated_cli_package/command_package.json",
  "/generated/python/workspace-cli/generated_cli_package/adapter_commands.json",
  "/src/agentic_workspace",
  "/tests",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py311"
src = ["src", "tests", "packages/command-generation/src"]

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["agentic_workspace"]

[tool.coverage.report]
show_missing = true
skip_covered = true

