[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentic-workspace"
version = "0.20.0"
description = "Repo-native continuity and execution layer for agents, combining workspace routing, active planning, and durable memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "agentic-memory",
  "agentic-planning",
  "agentic-verification",
]

[project.scripts]
agentic-workspace = "agentic_workspace.cli:main"

[dependency-groups]
dev = [
  "command-generation @ https://github.com/rickardvh/command-generation/releases/download/v1.1.0/command_generation-1.1.0-py3-none-any.whl#sha256=7ed7f6fd59a29183dc18a360d6e38b105133ffcd05dadd9257101b14d270eeff",
  "jsonschema",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
  "ty",
  "pymarkdownlnt",
]

[tool.uv]
package = true

[tool.uv.sources]
agentic-memory = { workspace = true }
agentic-planning = { workspace = true }
agentic-verification = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/memory",
  "packages/planning",
  "packages/verification",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_workspace"]

[tool.hatch.build.targets.wheel.force-include]
"generated/workspace/python/__init__.py" = "src/agentic_workspace/_generated_cli_package_impl/__init__.py"
"generated/workspace/python/cli.py" = "src/agentic_workspace/_generated_cli_package_impl/cli.py"
"generated/workspace/python/command_package.json" = "src/agentic_workspace/_generated_cli_package_impl/command_package.json"
"generated/workspace/python/adapter_commands.json" = "src/agentic_workspace/_generated_cli_package_impl/adapter_commands.json"
"generated/workspace/python/operations" = "src/agentic_workspace/_generated_cli_package_impl/operations"
"generated/workspace/python/commands" = "src/agentic_workspace/_generated_cli_package_impl/commands"
"generated/workspace/python/primitives" = "src/agentic_workspace/_generated_cli_package_impl/primitives"
"generated/workspace/python/_contracts" = "src/agentic_workspace/_generated_cli_package_impl/_contracts"

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/generated/memory/python/generated_command_adapters.json",
  "/generated/planning/python/generated_command_adapters.json",
  "/generated/workspace/python/generated_command_adapters.json",
  "/generated/workspace/python/__init__.py",
  "/generated/workspace/python/cli.py",
  "/generated/workspace/python/command_package.json",
  "/generated/workspace/python/adapter_commands.json",
  "/generated/workspace/python/operations",
  "/generated/workspace/python/commands",
  "/generated/workspace/python/primitives",
  "/generated/workspace/python/_contracts",
  "/src/agentic_workspace",
  "/tests",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["agentic_workspace"]

[tool.coverage.report]
show_missing = true
skip_covered = true
